# polyagamma

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  build.py  build_wheels.sh  pyproject.toml  requirements-dev.txt  setup.py
.circleci/: config.yml
.github/workflows/: build-and-test.yml  codeql.yml  release.yml
examples/: c_polyagamma.c
include/: pgm_density.h  pgm_random.h
polyagamma/: __init__.pxd  __init__.py  __init__.pyi  _polyagamma.pxd  _polyagamma.pyi  _polyagamma.pyx
scripts/: benchmark.py  generate_alternate_truncation_pts.py  generate_saddle_tangent_points.py  plot.py  requirements.txt
src/: pgm_alternate.c  pgm_alternate.h  pgm_alternate_trunc_points.h  pgm_common.c  pgm_common.h  pgm_density.c  pgm_devroye.c  pgm_devroye.h  pgm_igammaq.c  pgm_igammaq.h  pgm_macros.h  pgm_random.c  pgm_saddle.c  pgm_saddle.h  pgm_saddle_tangent_points.h
tests/: test_polyagamma.py  test_version.py
