[build-system]
requires = [
    "wheel",
    "cython==0.29.30",
    "setuptools>=61.0.0",
    "numpy==1.23.2; python_version>='3.11'",
    "numpy==1.21.3; python_version=='3.10'",
    "numpy==1.19.0; python_version<='3.9'",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"


[project]
name = "polyagamma"
authors = [
    {name = "Zolisa Bleki", email = "zolisa.bleki@gmail.com"}
]
description = "Efficiently generate samples from the Polya-Gamma distribution using a NumPy/SciPy compatible interface."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = ["numpy >= 1.19.0"]
license = {text = "BSD 3-Clause License"}
keywords = ['polya-gamma distribution', 'polya-gamma random sampling']
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: MacOS :: MacOS X",
    "Typing :: Typed",
]

[project.urls]
source = "https://github.com/zoj613/polyagamma"
tracker = "https://github.com/zoj613/polyagamma/issues"


[tool.setuptools]
packages = ["polyagamma"]

[tool.setuptools.exclude-package-data]
polyagamma = ["*.pyx"]

[tool.setuptools_scm]
write_to = "polyagamma/_version.py"

[tool.coverage.run]
plugins = ["Cython.Coverage"]
